--- a/app/tag/@spec/page.mdx
+++ b/app/tag/@spec/page.mdx
@@ -135,12 +135,12 @@ This sub-component has the same interaction states as [[Button]] except for the 
 | `--par-color-border-tag`               | Tag border               | Any               | `.tag`                      |
 | `--par-color-text-tag`                 | Tag text                 | Default/Enabled   | `.tag`                      |
 | `--par-color-text-tag-disabled`        | Tag text                 | Disabled          | `.tag:disabled`             |
-| `--par-color-icon-tag`                 | Tag icon                 | Any               | `.tag .icon`                |
-| `--par-color-bg-tag-remove-hovered`    | Remove button background | Hovered           | `.tag .remove-btn:hover`    |
-| `--par-color-bg-tag-remove-pressed`    | Remove button background | Pressed           | `.tag .remove-btn:active`   |
-| `--par-color-bg-tag-remove-disabled`   | Remove button background | Disabled          | `.tag .remove-btn:disabled` |
-| `--par-color-text-tag-remove`          | Remove button text/icon  | Any               | `.tag .remove-btn`          |
-| `--par-color-text-tag-remove-disabled` | Remove button text/icon  | Disabled          | `.tag .remove-btn:disabled` |
+| `--par-color-icon-tag`                 | Tag icon                 | Any               | `.tag .tag-icon`                |
+| `--par-color-bg-tag-remove-hovered`    | Remove button background | Hovered           | `.tag .tag-close-btn:hover`    |
+| `--par-color-bg-tag-remove-pressed`    | Remove button background | Pressed           | `.tag .tag-close-btn:active`   |
+| `--par-color-bg-tag-remove-disabled`   | Remove button background | Disabled          | `.tag .tag-close-btn:disabled` |
+| `--par-color-text-tag-remove`          | Remove button text/icon  | Any               | `.tag .tag-close-btn`          |
+| `--par-color-text-tag-remove-disabled` | Remove button text/icon  | Disabled          | `.tag .tag-close-btn:disabled` |
 
 > _Note: Tag uses the same design tokens as the Badge or Chip component. See Badge/Chip documentation for available tokens._
 
