--- a/app/toast/@spec/page.mdx
+++ b/app/toast/@spec/page.mdx
@@ -12,61 +12,84 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Design checklist <span id="design-checklist"></span>
 
-{/* Design checklist specification */}
-
 | Status | Item          | Description                                                                                                                                                                                                                       |
 | ------ | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✔️     | Anatomy       | Includes descriptions of all parts of the component and its major variants.                                                                                                                                                       |
-| ✔️     | States        | Includes all applicable interaction, display and value states.                                                                                                                                                                    |
-| ✔️     | Options       | Includes all relevant options (functional type, stylistic kind, semantic color, size, orientation, optional iconography, decorations, etc.)                                                                                       |
+| ✔️     | Anatomy       | Includes descriptions of all parts of the Toast component and its major variants (container, icon, title, message, action, close button, progress bar).                                                                           |
+| ✔️     | States        | Includes all applicable interaction, display and value states (default, hovered, pressed, focused, disabled, pending, collapsed, expanded).                                                                                       |
+| ✔️     | Options       | Includes all relevant options (kind, emphasis, height, position, autoDismiss, progressBar, etc.).                                                                                                                                |
 | ✔️     | Color schemes | Includes both light and dark color schemes.                                                                                                                                                                                       |
-|        | Behaviors     | Includes descriptions of behaviors related to other components and responsive behaviors related to media breakpoints, size (minimums and maximums), orientation, alignment, position and layout (wrapping, truncation, overflow). |
+| ✔️     | Behaviors     | Includes descriptions of behaviors: auto-dismiss, stacking, progress bar, keyboard accessibility, responsive layout.                                                                                                             |
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Container**: The outermost element with class `toast`.
+- **Icon**: Optional icon or spinner, shown at the start (`toast-icon`).
+- **Title**: Main heading of the toast (`toast-title`).
+- **Message**: Main content/message (`toast-message`).
+- **Action**: Optional action element (button or link, `toast-action`).
+- **Close button**: Dismiss button (`toast-close`).
+- **Progress bar**: Optional progress indicator (`toast-progress-bar`).
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Default**: Toast is visible and enabled.
+- **Hovered**: Mouse is over the toast (pauses auto-dismiss if enabled).
+- **Pressed**: Close button or action is pressed.
+- **Focused**: Toast is focused (keyboard navigation).
+- **Disabled**: Not applicable (toasts are not disabled, but close button can be disabled).
+- **Pending**: Shows spinner, disables close button.
+- **Collapsed**: Used for stacking animation.
+- **Expanded**: Default visible state.
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **kind**: 'generic' | 'information' | 'affirmative' | 'cautionary' | 'adverse'
+- **emphasis**: 'normal' | 'high'
+- **height**: 'flexible' | 'compact'
+- **position**: 'top-right' | 'top-center' | 'bottom-right' | 'bottom-center'
+- **autoDismiss**: boolean
+- **progressBar**: boolean
+- **dismissButton**: boolean
+- **importance**: number
+- **pending**: boolean
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- **Auto-dismiss**: Toast can auto-dismiss after a duration, optionally paused on hover.
+- **Stacking**: Multiple toasts can be stacked, with animation and scaling.
+- **Progress bar**: Shows remaining time for auto-dismiss.
+- **Keyboard accessibility**: Toast is focusable, close button is keyboard accessible.
+- **Responsive**: Layout adapts to container width.
 
 ## Changelog <span id="changelog"></span>
 
-{/* Changelog specification */}
-
 | Date       | Type                                                     | Description    | Author      | Associated issue(s) |
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
-| YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
+| 2024-06-03 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
 ## 🎨 Design Tokens for Toast
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-toast`                  | Toast background              | Default/Enabled           | `.toast` |
-| `--par-color-bg-toast-info`             | Toast background              | Info                      | `.toast.info` |
-| `--par-color-bg-toast-success`          | Toast background              | Success                   | `.toast.success` |
-| `--par-color-bg-toast-error`            | Toast background              | Error                     | `.toast.error` |
-| `--par-color-border-toast`              | Toast border                  | Any                       | `.toast` |
-| `--par-color-text-toast`                | Toast text                    | Default/Enabled           | `.toast` |
-| `--par-color-text-toast-info`           | Toast text                    | Info                      | `.toast.info` |
-| `--par-color-text-toast-success`        | Toast text                    | Success                   | `.toast.success` |
-| `--par-color-text-toast-error`          | Toast text                    | Error                     | `.toast.error` |
-| `--par-color-icon-toast`                | Toast icon                    | Any                       | `.toast .icon` |
-| `--par-color-bg-toast-close-hovered`    | Close button background        | Hovered                   | `.toast .close-btn:hover` |
-| `--par-color-bg-toast-close-pressed`    | Close button background        | Pressed                   | `.toast .close-btn:active` |
-| `--par-color-bg-toast-close-disabled`   | Close button background        | Disabled                  | `.toast .close-btn:disabled` |
-| `--par-color-text-toast-close`          | Close button text/icon         | Any                       | `.toast .close-btn` |
-| `--par-color-text-toast-close-disabled` | Close button text/icon         | Disabled                  | `.toast .close-btn:disabled` |
+| **Token**                                         | **Color for**                | **State/Meaning**         | **CSS Selector(s)**                       |
+|-------------------------------------------------- | ---------------------------- | ------------------------- | ------------------------------------------ |
+| `--par-color-bg-toast-emphasis-high-generic`      | Toast background             | Generic                   | `.toast.emphasis-high.generic`             |
+| `--par-color-bg-toast-emphasis-high-information`  | Toast background             | Information               | `.toast.emphasis-high.information`         |
+| `--par-color-bg-toast-emphasis-high-affirmative`  | Toast background             | Affirmative (success)     | `.toast.emphasis-high.affirmative`         |
+| `--par-color-bg-toast-emphasis-high-cautionary`   | Toast background             | Cautionary (warning)      | `.toast.emphasis-high.cautionary`          |
+| `--par-color-bg-toast-emphasis-high-adverse`      | Toast background             | Adverse (error)           | `.toast.emphasis-high.adverse`             |
+| `--par-color-bg-emphasis-normal`                  | Toast background             | Normal emphasis           | `.toast.emphasis-normal`                   |
+| `--par-color-border-toast-emphasis-high-generic`  | Toast border                 | Generic                   | `.toast.emphasis-high.generic`             |
+| `--par-color-border-toast-emphasis-high-info`     | Toast border                 | Information               | `.toast.emphasis-high.information`         |
+| `--par-color-border-toast-emphasis-high-affirmative`| Toast border               | Affirmative (success)     | `.toast.emphasis-high.affirmative`         |
+| `--par-color-border-toast-emphasis-high-cautionary`| Toast border               | Cautionary (warning)      | `.toast.emphasis-high.cautionary`          |
+| `--par-color-border-toast-emphasis-high-adverse`  | Toast border                 | Adverse (error)           | `.toast.emphasis-high.adverse`             |
+| `--par-color-border-emphasis-normal`              | Toast border                 | Normal emphasis           | `.toast.emphasis-normal`                   |
+| `--par-color-border-progress-bar-generic`         | Progress bar                 | Generic                   | `.toast.generic > .toast-progress-bar`      |
+| `--par-color-border-progress-bar-info`            | Progress bar                 | Information               | `.toast.information > .toast-progress-bar`  |
+| `--par-color-border-progress-bar-affirmative`     | Progress bar                 | Affirmative (success)     | `.toast.affirmative > .toast-progress-bar`  |
+| `--par-color-border-progress-bar-cautionary`      | Progress bar                 | Cautionary (warning)      | `.toast.cautionary > .toast-progress-bar`   |
+| `--par-color-border-progress-bar-adverse`         | Progress bar                 | Adverse (error)           | `.toast.adverse > .toast-progress-bar`      |
 
-> _Note: Toast uses the same design tokens as the Alert or Notification component. See Alert/Notification documentation for available tokens._
+> _Note: Toast uses design tokens defined in `variables.css` and shares some tokens with Alert/Notification._
 
 ---
 
@@ -74,14 +97,24 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ### `<Toast />`
 
-| **Prop**        | **Type**                       | **Default** | **Description**                              |
-| --------------- | ------------------------------ | ----------- | -------------------------------------------- |
-| **message**     | string \| ReactNode            |             | Toast message                                |
-| **type**        | 'info' \| 'success' \| 'error' | _'info'_    | Toast type                                   |
-| **duration**    | number                         | _3000_      | Duration in ms                               |
-| **onClose**     | function ()                    |             | Callback when toast is closed                |
-| **...divProps** | HTMLDivElement props           |             | All native div props (className, style, ...) |
+| **Prop**        | **Type**                                                        | **Default** | **Description**                              |
+| --------------- | --------------------------------------------------------------- | ----------- | -------------------------------------------- |
+| **title**       | string \| ReactNode                                             |             | Toast title                                  |
+| **message**     | string \| ReactNode                                             |             | Toast message                                |
+| **action**      | ReactNode                                                       |             | Optional action element                      |
+| **kind**        | 'generic' \| 'information' \| 'affirmative' \| 'cautionary' \| 'adverse' | 'generic'   | Toast type                                   |
+| **emphasis**    | 'normal' \| 'high'                                              | 'high'      | Emphasis level                               |
+| **height**      | 'flexible' \| 'compact'                                         | 'flexible'  | Height variant                               |
+| **position**    | 'top-right' \| 'top-center' \| 'bottom-right' \| 'bottom-center'| 'top-right' | Toast position                               |
+| **autoDismiss** | boolean                                                         | false       | Auto-dismiss after duration                  |
+| **duration**    | number                                                          | 5000        | Duration in ms                               |
+| **pauseOnHover**| boolean                                                         | true        | Pause auto-dismiss on hover                  |
+| **icon**        | ReactNode                                                       |             | Custom icon                                  |
+| **progressBar** | boolean                                                         | false       | Show progress bar                            |
+| **dismissButton**| boolean                                                        | true        | Show close button                            |
+| **importance**  | number                                                          | 0           | Importance for stacking/sorting              |
+| **pending**     | boolean                                                         | false       | Pending state (shows spinner)                |
+| **onDismissed** | function ()                                                     |             | Callback when toast is dismissed             |
+| **...divProps** | HTMLDivElement props                                            |             | All native div props (className, style, ...) |
 
-> **_Note:_** _Toast_ **inherits** all native props from **HTMLDivElement**.
-
----
+> **_Note:_** _ToastOptions_ is imported from the Toast component and includes all above props except `id` and `removeToast` (which are internal).
