--- a/app/date-input/@spec/page.mdx
+++ b/app/date-input/@spec/page.mdx
@@ -47,26 +47,26 @@ A component that organizes content into vertically stacked collapsible and expan
 
 | **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
 |---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-field-enabled`          | Input background             | Enabled                   | `.date-input:enabled` |
-| `--par-color-bg-field-hovered`          | Input background             | Hovered                   | `.date-input:hover` |
-| `--par-color-bg-field-disabled`         | Input background             | Disabled                  | `.date-input:disabled` |
-| `--par-color-bg-field-readonly`         | Input background             | Readonly                  | `.date-input[readonly]` |
-| `--par-color-bg-field-invalid`          | Input background             | Invalid/Error             | `.date-input.invalid` |
-| `--par-color-border-field-enabled`      | Input border                 | Enabled                   | `.date-input:enabled` |
-| `--par-color-border-field-hovered`      | Input border                 | Hovered                   | `.date-input:hover` |
-| `--par-color-border-field-disabled`     | Input border                 | Disabled                  | `.date-input:disabled` |
-| `--par-color-border-field-invalid`      | Input border                 | Invalid/Error             | `.date-input.invalid` |
-| `--par-color-border-field-focused`      | Input border                 | Focused                   | `.date-input:focus` |
-| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.date-input::placeholder` |
-| `--par-color-text-field-filled`         | Input text                   | Filled                    | `.date-input` |
-| `--par-color-text-field-label`          | Label text                   | Any                       | `.date-input-label` |
-| `--par-color-text-field-disabled`       | Input text                   | Disabled                  | `.date-input:disabled` |
-| `--par-color-text-field-readonly`       | Input text                   | Readonly                  | `.date-input[readonly]` |
-| `--par-color-text-field-invalid`        | Input text                   | Invalid/Error             | `.date-input.invalid` |
-| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.date-input .icon-button:enabled` |
-| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.date-input .icon-button:hover` |
-| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.date-input .icon-button:active` |
-| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.date-input .icon-button:disabled` |
+| `--par-color-bg-field-enabled`          | Input background             | Enabled                   | `.par-input:enabled` |
+| `--par-color-bg-field-hovered`          | Input background             | Hovered                   | `.par-input:hover` |
+| `--par-color-bg-field-disabled`         | Input background             | Disabled                  | `.par-input:disabled` |
+| `--par-color-bg-field-readonly`         | Input background             | Readonly                  | `.par-input[readonly]` |
+| `--par-color-bg-field-invalid`          | Input background             | Invalid/Error             | `.par-input.error-state` |
+| `--par-color-border-field-enabled`      | Input border                 | Enabled                   | `.par-input:enabled` |
+| `--par-color-border-field-hovered`      | Input border                 | Hovered                   | `.par-input:hover` |
+| `--par-color-border-field-disabled`     | Input border                 | Disabled                  | `.par-input:disabled` |
+| `--par-color-border-field-invalid`      | Input border                 | Invalid/Error             | `.par-input.error-state` |
+| `--par-color-border-field-focused`      | Input border                 | Focused                   | `.par-input:focus` |
+| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.par-input::placeholder` |
+| `--par-color-text-field-filled`         | Input text                   | Filled                    | `.par-input` |
+| `--par-color-text-field-label`          | Label text                   | Any                       | `.contained-label` |
+| `--par-color-text-field-disabled`       | Input text                   | Disabled                  | `.par-input:disabled` |
+| `--par-color-text-field-readonly`       | Input text                   | Readonly                  | `.par-input[readonly]` |
+| `--par-color-text-field-invalid`        | Input text                   | Invalid/Error             | `.par-input.error-state` |
+| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.right-element-container button:enabled, .left-element-container button:enabled, .par-input-action-btn:enabled` |
+| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.right-element-container button:hover, .left-element-container button:hover, .par-input-action-btn:hover` |
+| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.right-element-container button:active, .left-element-container button:active, .par-input-action-btn:active` |
+| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.right-element-container button:disabled, .left-element-container button:disabled, .par-input-action-btn:disabled` |
 
 **_Tip:_** _Override these tokens in your theme or style to customize the appearance of DateInput._
 
