--- a/app/number-input/@spec/page.mdx
+++ b/app/number-input/@spec/page.mdx
@@ -24,19 +24,46 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Input field**: The main numeric input (custom input, class `.par-input` inside `.number-input`).
+- **Stepper**: Increment/decrement buttons (can be auto, chevron, or separate), class `.number-stepper-wrapper`.
+- **Unit selector**: Dropdown for selecting a unit (if provided), class `.input-unit`.
+- **Clear button**: Button to quickly clear the value, class `.clear-button`.
+- **Error message**: Displays validation errors, class `.input-error-message`.
+- **Label/Floating label**: Optional floating label, class `.contained-label`.
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Default**: Standard state, allows number input.
+- **Hover**: When hovering over the input or stepper.
+- **Focus**: When the input is focused (mouse or keyboard).
+- **Disabled**: Input and controls are disabled and non-interactive.
+- **Readonly**: Value is visible but not editable.
+- **Error**: Error state with warning border and text.
+- **Filled**: Value has been entered.
+- **With unit**: Unit selector is visible.
+- **With stepper**: Stepper controls are visible.
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **stepper**: Stepper type (`auto`, `chevron`, `separate`).
+- **unit**: Unit or list of units (`string | string[]`).
+- **selectedUnit**: Currently selected unit.
+- **inputSize**: Size (`sm`, `md`).
+- **theme**: Theme (`default`, `alternative`).
+- **floatingLabel**: Floating label.
+- **isClearable**: Show clear button.
+- **leftIcon**: Icon on the left.
+- **min, max, stepControl**: Value limits and step size.
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- **Increment/decrement**: Change value using stepper or up/down arrow keys.
+- **Unit selection**: Choose a unit from the dropdown if multiple units are provided.
+- **Clear**: Clear the value using the clear button or ESC key (if `isClearable`).
+- **Focus/Blur**: Supports keyboard navigation (Tab/Shift+Tab), focus ring, and blur on outside click.
+- **Readonly/Disabled**: Prevents editing or interaction.
+- **Error**: Shows error message and styling when in error state.
+- **Keyboard behaviors**: Tab to focus, Shift+Tab to reverse, ArrowUp/ArrowDown to increment/decrement, ESC to clear (if clearable).
 
 ## Changelog <span id="changelog"></span>
 
@@ -48,28 +75,28 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## 🎨 Design Tokens for NumberInput
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-field-enabled`          | Input background             | Enabled                   | `.number-input:enabled` |
-| `--par-color-bg-field-hovered`          | Input background             | Hovered                   | `.number-input:hover` |
-| `--par-color-bg-field-disabled`         | Input background             | Disabled                  | `.number-input:disabled` |
-| `--par-color-bg-field-readonly`         | Input background             | Readonly                  | `.number-input[readonly]` |
-| `--par-color-bg-field-invalid`          | Input background             | Invalid/Error             | `.number-input.invalid` |
-| `--par-color-border-field-enabled`      | Input border                 | Enabled                   | `.number-input:enabled` |
-| `--par-color-border-field-hovered`      | Input border                 | Hovered                   | `.number-input:hover` |
-| `--par-color-border-field-disabled`     | Input border                 | Disabled                  | `.number-input:disabled` |
-| `--par-color-border-field-invalid`      | Input border                 | Invalid/Error             | `.number-input.invalid` |
-| `--par-color-border-field-focused`      | Input border                 | Focused                   | `.number-input:focus` |
-| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.number-input::placeholder` |
-| `--par-color-text-field-filled`         | Input text                   | Filled                    | `.number-input` |
-| `--par-color-text-field-label`          | Label text                   | Any                       | `.number-input-label` |
-| `--par-color-text-field-disabled`       | Input text                   | Disabled                  | `.number-input:disabled` |
-| `--par-color-text-field-readonly`       | Input text                   | Readonly                  | `.number-input[readonly]` |
-| `--par-color-text-field-invalid`        | Input text                   | Invalid/Error             | `.number-input.invalid` |
-| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.number-input .icon-button:enabled` |
-| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.number-input .icon-button:hover` |
-| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.number-input .icon-button:active` |
-| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.number-input .icon-button:disabled` |
+| **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                        |
+| ---------------------------------------- | ---------------------------- | ----------------- | -------------------------------------------------------------------------- |
+| `--par-color-bg-field-enabled`           | Input background             | Enabled           | `.number-input .par-input:enabled`                                         |
+| `--par-color-bg-field-hovered`           | Input background             | Hovered           | `.number-input .par-input:hover`                                           |
+| `--par-color-bg-field-disabled`          | Input background             | Disabled          | `.number-input .par-input:disabled`                                        |
+| `--par-color-bg-field-readonly`          | Input background             | Readonly          | `.number-input .par-input[readonly]`                                       |
+| `--par-color-bg-field-invalid`           | Input background             | Invalid/Error     | `.number-input .par-input.error-state`                                     |
+| `--par-color-border-field-enabled`       | Input border                 | Enabled           | `.number-input .par-input:enabled`                                         |
+| `--par-color-border-field-hovered`       | Input border                 | Hovered           | `.number-input .par-input:hover`                                           |
+| `--par-color-border-field-disabled`      | Input border                 | Disabled          | `.number-input .par-input:disabled`                                        |
+| `--par-color-border-field-invalid`       | Input border                 | Invalid/Error     | `.number-input .par-input.error-state`                                     |
+| `--par-color-border-field-focused`       | Input border                 | Focused           | `.number-input .par-input:focus`                                           |
+| `--par-color-text-field-placeholder`     | Placeholder text             | Any               | `.number-input .par-input::placeholder`                                    |
+| `--par-color-text-field-filled`          | Input text                   | Filled            | `.number-input .par-input`                                                 |
+| `--par-color-text-field-label`           | Label text                   | Any               | `.number-input-label`                                                      |
+| `--par-color-text-field-disabled`        | Input text                   | Disabled          | `.number-input .par-input:disabled`                                        |
+| `--par-color-text-field-readonly`        | Input text                   | Readonly          | `.number-input .par-input[readonly]`                                       |
+| `--par-color-text-field-invalid`         | Input text                   | Invalid/Error     | `.number-input .par-input.error-state`                                     |
+| `--par-color-icon-field-button-enabled`  | Icon color (button enabled)  | Enabled           | `.number-input .clear-button:enabled, .number-input .input-icon:enabled`   |
+| `--par-color-icon-field-button-hovered`  | Icon color (button hovered)  | Hovered           | `.number-input .clear-button:hover, .number-input .input-icon:hover`       |
+| `--par-color-icon-field-button-pressed`  | Icon color (button pressed)  | Pressed           | `.number-input .clear-button:active, .number-input .input-icon:active`     |
+| `--par-color-icon-field-button-disabled` | Icon color (button disabled) | Disabled          | `.number-input .clear-button:disabled, .number-input .input-icon:disabled` |
 
 > _Note: NumberInput uses the same design tokens as the Input component. See Input documentation for available tokens._
 
@@ -79,14 +106,25 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ### `<NumberInput />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                              |
-| ----------------- | ------------------------- | ----------- | -------------------------------------------- |
-| **type**          | string                    | _'number'_  | Input type (always 'number' for NumberInput) |
-| **min**           | number                    |             | Minimum value                                |
-| **max**           | number                    |             | Maximum value                                |
-| **step**          | number                    | _1_         | Step increment                               |
-| **onChange**      | function (event)          |             | Callback when value changes                  |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**            |
+| **Prop**          | **Type**                          | **Default** | **Description**                              |
+| ----------------- | --------------------------------- | ----------- | -------------------------------------------- |
+| **type**          | string                            | _'number'_  | Input type (always 'number' for NumberInput) |
+| **min**           | number                            |             | Minimum value                                |
+| **max**           | number                            |             | Maximum value                                |
+| **stepControl**   | number                            | _1_         | Step increment                               |
+| **stepper**       | 'auto' \| 'chevron' \| 'separate' | _'auto'_    | Stepper type                                 |
+| **unit**          | string \| string[]                |             | Unit or list of units                        |
+| **selectedUnit**  | string                            |             | Selected unit                                |
+| **onUnitChange**  | (unit: string) => void            |             | Callback when unit changes                   |
+| **allowInput**    | boolean                           | _true_      | Allow manual input when using stepper        |
+| **onValueChange** | function (values, event?)         |             | Callback when value changes (number format)  |
+| **isClearable**   | boolean                           | _false_     | Show clear button                            |
+| **floatingLabel** | React.ReactNode                   |             | Floating label                               |
+| **theme**         | 'default' \| 'alternative'        | _'default'_ | Theme                                        |
+| **inputSize**     | 'sm' \| 'md'                      | _'sm'_      | Input size                                   |
+| **leftIcon**      | React.ReactNode                   |             | Left icon                                    |
+| **onClear**       | () => void                        |             | Callback when clear                          |
+| **...InputProps** | [See Input](../BaseInput)         |             | Inherits all props from **Input**            |
 
 > **_Note:_** _NumberInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
 
