--- a/app/slider/@spec/page.mdx
+++ b/app/slider/@spec/page.mdx
@@ -24,19 +24,49 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Container**: The outermost element with class `slider`.
+- **Track**: The background bar, class `slider-track`.
+- **Progress**: The filled portion, class `slider-progress` (with color modifier).
+- **Marks**: Mark points, class `slider-marks` and `slider-marks-item`.
+- **Dot**: Mark dot, class `slider-dot` (with `in-range`/`out-range`).
+- **Label**: Mark label, class `slider-label`.
+- **Thumb**: Native input[type=range] thumb, styled via `par-input-slider` and browser pseudo-elements.
+- **Indicator**: Value indicator, class `indicator-wrapper` and `slider-thumb-indicator-text`.
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Enabled**: Default state, interactive.
+- **Hovered**: Thumb hovered (via input[type=range]:hover), shows state layer.
+- **Active/Dragging**: Thumb active (input[type=range]:active), cursor changes.
+- **Focused**: Thumb focused (input[type=range]:focus), outline visible.
+- **Disabled**: All elements have reduced opacity and pointer-events disabled.
+- **Range**: Two thumbs and two indicators.
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **mode**: 'single' | 'range' (default: 'single')
+- **min**: number (default: 0)
+- **max**: number (default: 100)
+- **step**: number (default: 1)
+- **defaultValue**: number | [number, number] (default: 0 or [0, 50])
+- **marks**: array of objects with `value` (number) and optional `label` (string)
+- **color**: 'neutral' | 'accent' (default: 'neutral')
+- **orientation**: 'horizontal' | 'vertical' (default: 'horizontal')
+- **indicator**: 'normal' | 'tooltip' (default: 'normal')
+- **indicatorSide**: 'normal' | 'reverse' (default: 'normal')
+- **disabled**: boolean (default: false)
+- **onValueChange**: (value: number | [number, number]) => void
+- **...divProps**: All native div props (className, style, ...)
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- Supports both single and range selection.
+- Keyboard accessible: arrow keys, Home/End, PageUp/PageDown.
+- Responsive: vertical and horizontal layouts.
+- Marks and labels are optional and customizable.
+- Tooltip indicator shows value on focus/hover if enabled.
+- Disabled state prevents all interaction.
+- Color and orientation can be changed via props.
 
 ## Changelog <span id="changelog"></span>
 
@@ -48,21 +78,17 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## 🎨 Design Tokens for Slider
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-slider-track`           | Slider track background      | Default/Enabled           | `.slider-track` |
-| `--par-color-bg-slider-bar`             | Slider bar fill              | Default/Enabled           | `.slider-bar` |
-| `--par-color-bg-slider-bar-disabled`    | Slider bar fill              | Disabled                  | `.slider-bar:disabled` |
-| `--par-color-bg-slider-bar-active`      | Slider bar fill              | Active/Dragging           | `.slider-bar.active` |
-| `--par-color-bg-slider-bar-error`       | Slider bar fill              | Error/Invalid             | `.slider-bar.error` |
-| `--par-color-thumb-slider`              | Slider thumb                 | Default/Enabled           | `.slider-thumb` |
-| `--par-color-thumb-slider-hovered`      | Slider thumb                 | Hovered                   | `.slider-thumb:hover` |
-| `--par-color-thumb-slider-disabled`     | Slider thumb                 | Disabled                  | `.slider-thumb:disabled` |
-| `--par-color-thumb-slider-active`       | Slider thumb                 | Active/Dragging           | `.slider-thumb.active` |
-| `--par-color-thumb-slider-error`        | Slider thumb                 | Error/Invalid             | `.slider-thumb.error` |
-| `--par-color-mark-slider`               | Slider mark                  | Default/Enabled           | `.slider-mark` |
-| `--par-color-mark-slider-active`        | Slider mark                  | Active/Selected           | `.slider-mark.active` |
-| `--par-color-label-slider`              | Slider label text            | Any                       | `.slider-label` |
+| **Token**                                   | **Color for**                | **State/Meaning**         | **CSS Selector(s)**                |
+|---------------------------------------------|------------------------------|---------------------------|------------------------------------|
+| `--par-color-border-slider-track-enabled`   | Slider track                 | Default/Enabled           | `.slider-track`                    |
+| `--par-color-border-slider-progress-neutral-enabled` | Slider progress (neutral)   | Default/Enabled           | `.slider-progress`                 |
+| `--par-color-border-slider-progress-accent-enabled`  | Slider progress (accent)    | Default/Enabled           | `.slider-progress.accent`          |
+| `--par-color-border-slider-thumb-enabled`   | Slider thumb border          | Default/Enabled           | input[type=range].par-input-slider::-webkit-slider-thumb, ::-moz-range-thumb |
+| `--par-color-bg-slider-thumb-enabled`       | Slider thumb background      | Default/Enabled           | input[type=range].par-input-slider::-webkit-slider-thumb, ::-moz-range-thumb |
+| `--par-color-bg-slider-state-layer-hovered` | Thumb hover state layer      | Hovered                   | input[type=range].par-input-slider:hover::-webkit-slider-thumb, ::-moz-range-thumb:hover |
+| `--par-color-border-slider-discrete-neutral-active` | Mark dot (in range)         | Active                    | `.slider-dot.in-range`             |
+| `--par-color-border-slider-discrete-neutral-enabled` | Mark dot (out range)        | Default                   | `.slider-dot.out-range`            |
+| `--par-color-text-primary`                  | Indicator text               | Any                       | `.slider-thumb-indicator-text`     |
 
 > _Note: Slider uses the same design tokens as the Progress or Input component. See Progress/Input documentation for available tokens._
 
@@ -72,17 +98,21 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ### `<Slider />`
 
-| **Prop**        | **Type**             | **Default** | **Description**                              |
-| --------------- | -------------------- | ----------- | -------------------------------------------- |
-| **value**       | number \| number[]   |             | Current value                                |
-| **min**         | number               | _0_         | Minimum value                                |
-| **max**         | number               | _100_       | Maximum value                                |
-| **step**        | number               | _1_         | Step increment                               |
-| **onChange**    | function (value)     |             | Callback when value changes                  |
-| **disabled**    | boolean              | _false_     | Disable the slider                           |
-| **vertical**    | boolean              | _false_     | Vertical orientation                         |
-| **marks**       | object               |             | Mark points on the slider                    |
-| **...divProps** | HTMLDivElement props |             | All native div props (className, style, ...) |
+| **Prop**         | **Type**                        | **Default** | **Description**                              |
+|------------------|---------------------------------|-------------|----------------------------------------------|
+| **mode**         | 'single' \| 'range'             | 'single'    | Slider mode (single value or range)          |
+| **min**          | number                          | 0           | Minimum value                                |
+| **max**          | number                          | 100         | Maximum value                                |
+| **step**         | number                          | 1           | Step increment                               |
+| **defaultValue** | number \| [number, number]      | 0 or [0,50] | Initial value                                |
+| **marks**        | Array of mark objects              | []      | Mark points on the slider                    |
+| **color**        | 'neutral' \| 'accent'           | 'neutral'   | Slider color                                 |
+| **orientation**  | 'horizontal' \| 'vertical'      | 'horizontal'| Slider orientation                           |
+| **indicator**    | 'normal' \| 'tooltip'           | 'normal'    | Indicator type                               |
+| **indicatorSide**| 'normal' \| 'reverse'           | 'normal'    | Indicator position                           |
+| **disabled**     | boolean                         | false       | Disable the slider                           |
+| **onValueChange**| function (value)                |             | Callback when value changes                  |
+| **...divProps**  | HTMLDivElement props            |             | All native div props (className, style, ...) |
 
 > **_Note:_** _Slider_ **inherits** all native props from **HTMLDivElement**.
 
