--- a/app/tabs/@spec/page.mdx
+++ b/app/tabs/@spec/page.mdx
@@ -24,19 +24,38 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Tabs container**: The outermost element with class `.tabs`.
+- **Navigation wrapper**: Contains the tab buttons, class `.tabs-nav-wrapper`.
+- **Tab button**: Each clickable tab, class `.tab-button`.
+- **Tab content**: The content area for each tab, class `.tab-content`.
+
+_See Accordion spec for detailed format._
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Enabled**: Tab can be selected, default appearance.
+- **Hovered**: Tab is hovered, shows hover style.
+- **Active/Selected**: Tab is selected, shows active style.
+- **Disabled**: Tab cannot be selected, shows disabled style.
+
+_See Accordion spec for detailed format._
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **size**: 'sm' | 'md' (tab size)
+- **color**: 'neutral' | 'accent'
+- **theme**: 'default' | 'alternative'
+- **side**: 'left' | 'right' | 'top' | 'bottom' (tab position)
+- **flipped**: boolean (flip border position)
+- **indicatorSide**: 'same' | 'opposite'
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- Supports horizontal and vertical layouts.
+- Scrollable navigation if tabs overflow.
+- Keyboard navigation (arrow keys) supported.
+
+_See Accordion spec for accessibility/keyboard details._
 
 ## Changelog <span id="changelog"></span>
 
@@ -48,17 +67,19 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## 🎨 Design Tokens for Tabs
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-tabs`                   | Tabs background              | Default/Enabled           | `.tabs` |
-| `--par-color-bg-tab-active`             | Tab background               | Active/Selected           | `.tab.active` |
-| `--par-color-bg-tab-hovered`            | Tab background               | Hovered                   | `.tab:hover` |
-| `--par-color-bg-tab-disabled`           | Tab background               | Disabled                  | `.tab:disabled` |
-| `--par-color-border-tabs`               | Tabs border                  | Any                       | `.tabs, .tab` |
-| `--par-color-text-tab`                  | Tab text                     | Default/Enabled           | `.tab` |
-| `--par-color-text-tab-active`           | Tab text                     | Active/Selected           | `.tab.active` |
-| `--par-color-text-tab-disabled`         | Tab text                     | Disabled                  | `.tab:disabled` |
-| `--par-color-indicator-tabs`            | Tab indicator (underline)    | Active/Selected           | `.tab-indicator` |
+| **Token**                                   | **Color for**                | **State/Meaning**         | **CSS Selector(s)**         |
+|---------------------------------------------|------------------------------|---------------------------|-----------------------------|
+| `--par-color-bg-tab-item-enabled`           | Tab background               | Default/Enabled           | `.tab-button`               |
+| `--par-color-bg-tab-item-hovered`           | Tab background               | Hovered                   | `.tab-button:hover`         |
+| `--par-color-bg-tab-item-neutral-active`    | Tab background               | Active/Selected (neutral) | `.tab-button.active`        |
+| `--par-color-bg-tab-item-accent-active`     | Tab background               | Active/Selected (accent)  | `.tab-button.active`        |
+| `--par-color-bg-tab-item-disabled`          | Tab background               | Disabled                  | `.tab-button:disabled`      |
+| `--par-color-border-tab-container`          | Tabs border                  | Any                       | `.tabs-nav-wrapper`         |
+| `--par-color-text-tab-item-enabled`         | Tab text                     | Default/Enabled           | `.tab-button`               |
+| `--par-color-text-tab-item-hovered`         | Tab text                     | Hovered                   | `.tab-button:hover`         |
+| `--par-color-text-tab-item-neutral-active`  | Tab text                     | Active/Selected (neutral) | `.tab-button.active`        |
+| `--par-color-text-tab-item-accent-active`   | Tab text                     | Active/Selected (accent)  | `.tab-button.active`        |
+| `--par-color-text-tab-item-disabled`        | Tab text                     | Disabled                  | `.tab-button:disabled`      |
 
 > _Note: Tabs uses the same design tokens as the Button or Navigation component. See Button/Navigation documentation for available tokens._
 
@@ -70,13 +91,14 @@ A component that organizes content into vertically stacked collapsible and expan
 
 | **Prop**        | **Type**                               | **Default** | **Description**                              |
 | --------------- | -------------------------------------- | ----------- | -------------------------------------------- |
-| **tabs**        | array                                  |             | List of tab items                            |
-| **activeKey**   | string \| number                       |             | Active tab key                               |
-| **onChange**    | function (key)                         |             | Callback when tab changes                    |
-| **position**    | 'top' \| 'bottom' \| 'left' \| 'right' | _'top'_     | Tabs position                                |
-| **size**        | 'sm' \| 'md' \| 'lg'                   | _'md'_      | Tabs size                                    |
+| **data**        | array of TabItemProps                  |             | List of tab items                            |
+| **size**        | 'sm' \| 'md'                           | _'md'_      | Tabs size                                    |
+| **color**       | 'neutral' \| 'accent'                  | _'neutral'_ | Tabs color                                   |
+| **theme**       | 'default' \| 'alternative'             | _'default'_ | Tabs theme                                   |
+| **side**        | 'left' \| 'right' \| 'top' \| 'bottom' | _'left'_    | Tabs position                                |
+| **flipped**     | boolean                                | _false_     | Flip tab border position                     |
+| **indicatorSide**| 'same' \| 'opposite'                  | _'same'_    | Indicator side relative to border            |
+| **navProps**    | HTMLDivElement props                   |             | Props for nav container                      |
+| **bodyProps**   | HTMLDivElement props                   |             | Props for body container                     |
+| **scrollValue** | object (`{ value: number, duration: number }`)  | `{ value: 4, duration: 1 }`    | Scroll config for nav                        |
 | **...divProps** | HTMLDivElement props                   |             | All native div props (className, style, ...) |
-
-> **_Note:_** _Tabs_ **inherits** all native props from **HTMLDivElement**.
-
----
