--- a/app/textarea/@spec/page.mdx
+++ b/app/textarea/@spec/page.mdx
@@ -7,7 +7,7 @@ import * as Demo from '../@dev/demo-components';
 {/* Component => Component Example */}
 
 :::callout[note]
-A component that organizes content into vertically stacked collapsible and expandable sections.
+A multi-line text input field for entering and editing longer blocks of text.
 :::
 
 ## Design checklist <span id="design-checklist"></span>
@@ -50,26 +50,26 @@ A component that organizes content into vertically stacked collapsible and expan
 
 | **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
 |---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-field-enabled`          | Textarea background          | Enabled                   | `.textarea:enabled` |
-| `--par-color-bg-field-hovered`          | Textarea background          | Hovered                   | `.textarea:hover` |
-| `--par-color-bg-field-disabled`         | Textarea background          | Disabled                  | `.textarea:disabled` |
-| `--par-color-bg-field-readonly`         | Textarea background          | Readonly                  | `.textarea[readonly]` |
-| `--par-color-bg-field-invalid`          | Textarea background          | Invalid/Error             | `.textarea.invalid` |
-| `--par-color-border-field-enabled`      | Textarea border              | Enabled                   | `.textarea:enabled` |
-| `--par-color-border-field-hovered`      | Textarea border              | Hovered                   | `.textarea:hover` |
-| `--par-color-border-field-disabled`     | Textarea border              | Disabled                  | `.textarea:disabled` |
-| `--par-color-border-field-invalid`      | Textarea border              | Invalid/Error             | `.textarea.invalid` |
-| `--par-color-border-field-focused`      | Textarea border              | Focused                   | `.textarea:focus` |
-| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.textarea::placeholder` |
-| `--par-color-text-field-filled`         | Textarea text                | Filled                    | `.textarea` |
-| `--par-color-text-field-label`          | Label text                   | Any                       | `.textarea-label` |
-| `--par-color-text-field-disabled`       | Textarea text                | Disabled                  | `.textarea:disabled` |
-| `--par-color-text-field-readonly`       | Textarea text                | Readonly                  | `.textarea[readonly]` |
-| `--par-color-text-field-invalid`        | Textarea text                | Invalid/Error             | `.textarea.invalid` |
-| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.textarea .icon-button:enabled` |
-| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.textarea .icon-button:hover` |
-| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.textarea .icon-button:active` |
-| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.textarea .icon-button:disabled` |
+| `--par-color-bg-field-enabled`          | Textarea background          | Enabled                   | `.par-textarea:enabled` |
+| `--par-color-bg-field-hovered`          | Textarea background          | Hovered                   | `.par-textarea:hover` |
+| `--par-color-bg-field-disabled`         | Textarea background          | Disabled                  | `.par-textarea:disabled` |
+| `--par-color-bg-field-readonly`         | Textarea background          | Readonly                  | `.par-textarea[readonly]` |
+| `--par-color-bg-field-invalid`          | Textarea background          | Invalid/Error             | `.par-textarea.error-state` |
+| `--par-color-border-field-enabled`      | Textarea border              | Enabled                   | `.par-textarea:enabled` |
+| `--par-color-border-field-hovered`      | Textarea border              | Hovered                   | `.par-textarea:hover` |
+| `--par-color-border-field-disabled`     | Textarea border              | Disabled                  | `.par-textarea:disabled` |
+| `--par-color-border-field-invalid`      | Textarea border              | Invalid/Error             | `.par-textarea.error-state` |
+| `--par-color-border-field-focused`      | Textarea border              | Focused                   | `.par-textarea:focus` |
+| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.par-textarea::placeholder` |
+| `--par-color-text-field-filled`         | Textarea text                | Filled                    | `.par-textarea` |
+| `--par-color-text-field-label`          | Label text                   | Any                       | `.par-textarea-label` |
+| `--par-color-text-field-disabled`       | Textarea text                | Disabled                  | `.par-textarea:disabled` |
+| `--par-color-text-field-readonly`       | Textarea text                | Readonly                  | `.par-textarea[readonly]` |
+| `--par-color-text-field-invalid`        | Textarea text                | Invalid/Error             | `.par-textarea.error-state` |
+| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.textarea-clear-btn:enabled` |
+| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.textarea-clear-btn:hover` |
+| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.textarea-clear-btn:active` |
+| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.textarea-clear-btn:disabled` |
 
 > _Note: Textarea uses the same design tokens as the Input component. See Input documentation for available tokens._
 
