--- a/app/tooltip/@spec/page.mdx
+++ b/app/tooltip/@spec/page.mdx
@@ -24,19 +24,44 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Trigger**: The element that the tooltip is attached to (child of Tooltip, receives class `tooltip`).
+- **Tooltip content**: The floating content box, class `tooltip-content`.
+- **Arrow**: The caret/arrow pointing to the trigger, class `tooltip-caret`.
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Default**: Tooltip hidden, trigger is focusable.
+- **Visible**: Tooltip is shown (on hover, focus, click, or touch, depending on props).
+- **Hover**: Tooltip appears on mouse hover (default behavior).
+- **Focus**: Tooltip appears on keyboard focus.
+- **Click**: Tooltip appears on click if `isToggle` is true.
+- **Touch**: Tooltip appears on touch if `touchDelay` is set.
+- **Controlled**: Tooltip visibility is controlled by parent via `controlledOpen` prop.
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **position**: Placement of the tooltip relative to the trigger (top, bottom, left, right, etc.).
+- **isToggle**: If true, tooltip toggles on click.
+- **delay**: Delay (ms) before showing on hover.
+- **touchDelay**: Delay (ms) before showing on touch (mobile).
+- **isSafePolygon**: Enables safe polygon interaction (prevents closing when moving cursor between trigger and tooltip).
+- **controlledOpen**: Controls visibility externally.
+- **content**: Tooltip content (string or ReactNode).
+- **...divProps**: All native div props (className, style, ...).
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- Tooltip appears on hover, focus, click, or touch, depending on props.
+- Supports keyboard accessibility (Tab to focus, Escape to close if controlled).
+- Tooltip position auto-adjusts to stay in viewport (unless `isToggle` is true).
+- Uses portal to render tooltip content outside normal DOM flow.
+- Animation: fade-in effect on show.
+
+## Keyboard behaviors
+
+- **Tab**: Focuses the trigger, shows tooltip (if focus enabled).
+- **Escape**: Closes tooltip if open and controlled.
+- **Enter/Space**: If trigger is a button or link, activates it (native behavior).
 
 ## Changelog <span id="changelog"></span>
 
@@ -48,16 +73,13 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## 🎨 Design Tokens for Tooltip
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-tooltip`                | Tooltip background           | Default/Enabled           | `.tooltip` |
-| `--par-color-bg-tooltip-error`          | Tooltip background           | Error                     | `.tooltip.error` |
-| `--par-color-border-tooltip`            | Tooltip border               | Any                       | `.tooltip` |
-| `--par-color-text-tooltip`              | Tooltip text                 | Default/Enabled           | `.tooltip` |
-| `--par-color-text-tooltip-error`        | Tooltip text                 | Error                     | `.tooltip.error` |
-| `--par-color-arrow-tooltip`             | Tooltip arrow                | Any                       | `.tooltip-arrow` |
+| **Token**                          | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
+| ---------------------------------- | ------------------ | ----------------- | ------------------- |
+| `--par-color-bg-surface-inverse`   | Tooltip background | Default           | `.tooltip-content`  |
+| `--par-color-text-primary-inverse` | Tooltip text       | Default           | `.tooltip-content`  |
+| `--par-color-bg-surface-inverse`   | Tooltip arrow      | Default           | `.tooltip-caret`    |
 
-> _Note: Tooltip uses the same design tokens as the Popover or Overlay component. See Popover/Overlay documentation for available tokens._
+> _Note: Tooltip uses shared design tokens from Popover/Overlay. See Popover/Overlay documentation for full token list._
 
 ---
 
@@ -65,16 +87,15 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ### `<Tooltip />`
 
-| **Prop**            | **Type**             | **Default** | **Description**                              |
-| ------------------- | -------------------- | ----------- | -------------------------------------------- |
-| **content**         | string \| ReactNode  |             | Tooltip content                              |
-| **placement**       | string               | _'top'_     | Tooltip placement                            |
-| **visible**         | boolean              |             | Controlled visibility                        |
-| **defaultVisible**  | boolean              | _false_     | Default visibility (uncontrolled)            |
-| **onVisibleChange** | function (visible)   |             | Callback when visibility changes             |
-| **trigger**         | string               | _'hover'_   | Trigger type (hover, click, focus)           |
-| **...divProps**     | HTMLDivElement props |             | All native div props (className, style, ...) |
+| **Prop**           | **Type**             | **Default** | **Description**                              |
+| ------------------ | -------------------- | ----------- | -------------------------------------------- |
+| **content**        | string \| ReactNode  |             | Tooltip content                              |
+| **position**       | string               | _'top'_     | Tooltip placement                            |
+| **isToggle**       | boolean              | _false_     | Toggle on click                              |
+| **delay**          | number               | _0_         | Delay before show on hover (ms)              |
+| **touchDelay**     | number               |             | Delay before show on touch (ms)              |
+| **isSafePolygon**  | boolean              | _false_     | Safe polygon interaction                     |
+| **controlledOpen** | boolean              |             | Controlled visibility                        |
+| **...divProps**    | HTMLDivElement props |             | All native div props (className, style, ...) |
 
 > **_Note:_** _Tooltip_ **inherits** all native props from **HTMLDivElement**.
-
----
